--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon-16x16.png">
+    <link rel="icon" href="img/favicon-16x16.png">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Pokedex</title>
@@ -28,7 +28,7 @@
             <button class="button btn-prev">Prev &lt;</button>
             <button class="button btn-next">Next &gt;</button>
           </div>
-        <img src="pokedex.png" alt="imagem do pokedex" class="pokedex">
+        <img src="img/pokedex.png" alt="imagem do pokedex" class="pokedex">
     </main>
 </body>
 </html>
